Made the colours independent of the canvas size

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -4,6 +4,12 @@ canvas {
 
   # Canvas height, in pixels
   height = 256
+
+  # Default canvas width, in pixels
+  defaultWidth = 256
+
+  # Default canvas height, in pixels
+  defaultHeight = 256
 }
 
 colour {
