Plot a Sierpinski carpet instead of a Sierpinski triangle

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -23,11 +23,14 @@ colour {
 plot {
   # Clear the canvas whenever this number of points has been plotted
   # (since the canvas was last cleared)
-  maxPoints = 3000
+  maxPoints = 18000
 
   # Number of points plotted per run
-  pointsPerRun = 10
+  pointsPerRun = 60
 
   # Time between runs, in milliseconds
   waitTime = 50
 }
+
+# Scale down the copies of the fractal by this factor
+fractalScale = 3
