Specify the time taken for the graphs to cover the entire canvas width

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -20,6 +20,6 @@ plot {
   # Height and width of the points plotted
   pointSize = 3
 
-  # Time between runs, in milliseconds
-  waitTime = 20
+  # Time taken for the graphs to cover the width of the canvas, in milliseconds
+  widthTime = 7500
 }
